--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ixiosfoundation/base58",
+    "name": "ixiosfoundation/base58php",
     "description": "Base58 Encoding and Decoding Library for PHP",
     "require": {
         "php": ">=8.1"
